vertical overflow solved

--- a/style.css
+++ b/style.css
@@ -13,15 +13,15 @@ html {
     font-size: 16px;
     background-color: black;
     color: whitesmoke;
-    --boxLen: 5vh;
-    --contWidth: 44vh;
-    --contHeigt: 88vh;
-    --explosiveLen: 10vh;
+    --boxLen: 5dvh;
+    --contWidth: 44dvh;
+    --contHeigt: 88dvh;
+    --explosiveLen: 10dvh;
 }
 body {
     background-color: var(--orange1);
     overflow: hidden;
-    height: 100dvh;
+/* max-height: 100dvh; */
 }
 body * {}
 .cont {
@@ -29,14 +29,14 @@ body * {}
     height: var(--contHeigt);
     background-color: var(--blue1);
     margin: 0 auto;
-    padding-left: 20vh;
-    padding-top: 40vh;
+    padding-left: 20dvh;
+    padding-top: 40dvh;
     border-left: 1px solid black;
     border-right: 1px solid black;
 }
 header, footer {
     background-color: var(--orangeDarker);
-    height: 6vh;
+    height: 6dvh;
     display: flex;
     justify-content: center;
     align-items: center;
